# LeetCode

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  Cargo.toml  README.md  devenv.nix  fetch_problem.py  flake.nix  pyproject.toml  sources.cmake  vcpkg.json
.github/workflows/: ci.yml
000/: 009_palindrome_number.cpp  021_merge_two_sorted_lists.cpp  088_merge_sorted_array.cpp
0000/: 0001_two_sum.cpp  0002_add_two_numbers.cpp  0009_palindrome_number.cpp  0017_letter_combinations_of_a_phone_number.cpp  0019_remove_nth_node_from_end_of_list.cpp  0021_merge_two_sorted_lists.cpp  0027_remove_element.cpp  0042_trapping_rain_water.cpp  0050_pow_x_n.cpp  0069_sqrt_x.cpp  0088_merge_sorted_array.cpp
0100/: 0104_maximum_depth_of_binary_tree.cpp  0112_path_sum.cpp  0118_pascals_triangle.cpp  0136_single_number.cpp  0151_reverse_words_in_a_string.cpp
0200/: 0206_reverse_linked_list.cpp  0238_product_of_array_except_self.cpp  0258_add_digits.cpp  0283_move_zeroes.cpp
0300/: 0334_increasing_triplet_subsequence.cpp  0338_counting_bits.cpp  0345_reverse_vowels_of_a_string.cpp  0392_is_subsequence.cpp  345_reverse_vowels_of_a_string.cpp
0400/: 0443_string_compression.cpp  0443_string_compression.py  0450_delete_node_in_a_bst.cpp
0500/: 0506_relative_ranks.cpp  0557_reverse_words_in_a_string_iii.cpp  0566_reshape_the_matrix.cpp
0600/: 605_can_place_flowers.cpp  643_maximum_average_subarray_i.cpp
0700/: 0700_search_in_a_binary_search_tree.cpp  0724_find_pivot_index.cpp  0733_flood_fill.cpp  0735_asteroid_collision.cpp  0746_min_cost_climbing_stairs.cpp
0800/: 0841_keys_and_rooms.cpp  0872_leaf_similar_trees.cpp  0876_middle_of_the_linked_list.cpp
0900/: 0933_number_of_recent_calls.cpp
1000/: 1071_greatest_common_divisor_of_strings.cpp
1100/: 1137_nth_tribonacci_number.cpp
1300/: 1318_minimum_flips_to_make_a_or_b_equal_to_c.cpp
1400/: 1431_kids_with_the_greatest_number_of_candies.cpp
1700/: 1732_find_the_highest_altitude.cpp  1768_merge_string_alternately.cpp
1900/: 1926_nearest_exit_from_entrance_in_maze.cpp  1929_concatenation_of_array.cpp
200/: 206_reverse_linked_list.cpp
2200/: 2215_find_the_difference_of_two_arrays.cpp
2400/: 2469_convert_the_temperature.cpp
800/: 876_middle_of_the_linked_list.cpp
src/: 0002_add_two_numbers.cpp  0027_remove_element.cpp  0050_pow_x_n.cpp  0136_single_number.cpp  0151_reverse_words_in_a_string.py  0206_reverse_linked_list.cpp  0392_is_subsequence.cpp  0392_is_subsequence.py  0566_reshape_the_matrix.cpp  0735_asteroid_collision.cpp  1137_nth_tribonacci_number.cpp  1929_concatenation_of_array.cpp  2215_find_the_difference_of_two_arrays.cpp  2215_find_the_difference_of_two_arrays.py  lib.rs  p0001_two_sum.cpp  p0001_two_sum.py  p0001_two_sum.rs  p0002_add_two_numbers.cpp  p0003_longest_substring_without_repeating_characters.cpp  p0003_longest_substring_without_repeating_characters.py  p0003_longest_substring_without_repeating_characters.rs  p0007_reverse_integer.cpp  p0009_palindrome_number.cpp  p0011_container_with_most_water.cpp  p0011_container_with_most_water.py  p0011_container_with_most_water.rs  p0014_longest_common_prefix.cpp  p0014_longest_common_prefix.py  p0014_longest_common_prefix.rs  p0017_letter_combinations_of_a_phone_number.cpp  p0017_letter_combinations_of_a_phone_number.py  p0019_remove_nth_node_from_end_of_list.cpp  p0020_valid_parentheses.cpp  p0021_merge_two_sorted_lists.cpp  p0027_remove_element.cpp  p0036_valid_sudoku.cpp  p0042_trapping_rain_water.cpp  p0046_permutations.cpp  p0046_precompute.hpp  (+130 more)
templates/: lib.rs.j2  problem.cpp.j2  problem.html.j2  problem.py.j2  problem.rs.j2  sources.cmake.j2
util/: tree.cpp  tree.hpp
