[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "pytest>=8.3.3",
  "requests>=2.32.3",
  "rich>=13.9.2",
  "typer>=0.12.5",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "p*.py"
