[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "cachier>=3.1.2",
  "jinja2>=3.1.6",
  "pytest>=8.3.3",
  "requests>=2.32.3",
  "rich>=13.9.2",
  "typer>=0.12.5",
  "types-beautifulsoup4>=4.12.0.20250204",
  "types-requests>=2.32.0.20250306",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "p*.py"
